main: attribute-sessions-to-linear
